virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: airbyte-destination-rule
  namespace: deus
host: airbyte-us-airbyte-webapp-svc.deus.svc.cluster.local
trafficPolicy:
  loadBalancer:
    simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: airbyte-virtual-service
  namespace: deus
spec:
  exportTo:
    - .
  gateways:
    - istio-system/https-internal
  hosts:
    - airbyte.dev.us.quadpay.io
  http:
    - route:
        - destination:
            host: airbyte.deus.svc.cluster.local
            port:
              number: 80
